--- a/index.html
+++ b/index.html
@@ -19,26 +19,25 @@
         <div class="wrapper">
          <div id="full">
             <h1>About Me</h1>
-           <aside><img src="https://66.media.tumblr.com/avatar_d8fa4d22a6a1_128.pnj"></aside>
+           <aside><img src="https://pbs.twimg.com/media/EMHrVlgW4AA-IlQ?format=jpg&name=small" style="width:200px;height:200px;"></aside>
          
            <p>
-                "Hello! My name is Chace Tunnell. Most of this is placeholder lorem ipsum or keysmash text, since i;m working on something of a time crunch. sduahsl sUHFKJW FKhsm SKGFQKLNSN Fkbfms  dkjM K EJWGKAND N JAJQKWQJ jeSHWFB ekjsnam vn skjgqbasmnd vwm.
+                Hello! My name is Chace Tunnell. My parents met in Alaska and my older brother was born in Hawai'i,
+                but I was born in Houston and I've spent my whole life here. 
             </p>
+            <br>
             <p>
-                Hello! My name is Chace Tunnell. Most of this is placeholder lorem ipsum or keysmash text, since i;m working on something of a time crunch. sduahsl sUHFKJW FKhsm SKGFQKLNSN Fkbfms  dkjM K EJWGKAND N JAJQKWQJ jeSHWFB ekjsnam vn skjgqbasmnd vwm.""
+                Since I'm working on a time crunch, I don't really have any good pictures of myself.
+                This one is pretty much random; I just think drawing big eyes is neat.
             </p>
-                <br>
-                <p>
-                "Sorry if it all falls apart in this second paragraph; I'm working on kind of a time crunch.
-                <br>
-                Hello! My name is Chace Tunnell. Most of this is placeholder lorem ipsum or keysmash text, since i;m working on something of a time crunch. sduahsl sUHFKJW FKhsm SKGFQKLNSN Fkbfms  dkjM K EJWGKAND N JAJQKWQJ jeSHWFB ekjsnam vn skjgqbasmnd vwm.""
-                "Sorry if it all falls apart in this second paragraph; I'm working on kind of a time crunch.
-                <br>
+            <br>
+            <p>    I currently work as a petsitter/delivery driver. It's not particularly exciting, 
+                but I do love animals, so that's fun.
             </p>
         </div>
         <div class="push"></div>
         </div>
-        <footer class="footer">Copyright (c)</footer>
+        <footer class="footer">Copyright &#169;</footer>
       
     </body>
 </html>
