--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
            
         <div class="push"></div>
         </div>
-        <footer class="footer">Copyright (c)</footer>
+        <footer class="footer">Copyright &#169;</footer>
       
     </body>
 </html>
