--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
             <div class="wrapper">
 <div id="name">Chace Tunnell</div>
 <div class="links">
-    <a href="">About</a>
-    <a href="">Portfolio</a>
-    <a href="">Contact</a>
+    <a href="index.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact</a>
 </div>
 </div>
         </section>
